--- a/package.json
+++ b/package.json
@@ -1,81 +1,81 @@
 {
-	"name": "aurelia-google-analytics",
-	"version": "1.0.0",
-	"description": "An Aurelia plugin that adds Google Analytics page tracking to your application.",
-	"keywords": [
-		"analytics",
-		"tracking",
-		"aurelia"
-	],
-	"homepage": "https://github.com/miguelzakharia/aurelia-google-analytics",
-	"bugs": {
-		"url": "https://github.com/miguelzakharia/aurelia-google-analytics/issues"
-	},
-	"license": "MIT",
-	"author": "Miguel Zakharia <miguel@zakharia.me> (http://miguel.zakharia.me)",
-	"main": "dist/index.js",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/miguelzakharia/aurelia-google-analytics"
-	},
-	"scripts": {
-		"test": "gulp test"
-	},
-	"devDependencies": {
-		"aurelia-tools": "^0.1.3",
-		"browser-sync": "^1.8.1",
-		"conventional-changelog": "0.0.11",
-		"del": "^1.1.0",
-		"gulp": "^3.8.10",
-		"gulp-babel": "^5.1.0",
-		"gulp-bump": "^0.3.1",
-		"gulp-changed": "^1.1.0",
-		"gulp-if": "^1.2.5",
-		"gulp-jshint": "^1.9.0",
-		"gulp-less": "^3.0.3",
-		"gulp-load-plugins": "^0.10.0",
-		"gulp-minify-css": "^1.2.1",
-		"gulp-notify": "^2.2.0",
-		"gulp-plumber": "^0.6.6",
-		"gulp-protractor": "^0.0.12",
-		"gulp-sourcemaps": "^1.3.0",
-		"gulp-uglify": "^1.4.1",
-		"gulp-util": "^3.0.6",
-		"gulp-yuidoc": "^0.1.2",
-		"jasmine-core": "^2.1.3",
-		"jshint-stylish": "^1.0.0",
-		"karma": "^0.12.28",
-		"karma-babel-preprocessor": "^5.2.1",
-		"karma-chrome-launcher": "^0.1.7",
-		"karma-coverage": "^0.3.1",
-		"karma-jasmine": "^0.3.5",
-		"karma-jspm": "2.0.1-beta.2",
-		"object.assign": "^1.0.3",
-		"require-dir": "^0.1.0",
-		"run-sequence": "^1.0.2",
-		"vinyl-paths": "^1.0.0",
-		"yargs": "^2.1.1"
-	},
-	"jspm": {
-		"main": "index",
-		"format": "es6",
-		"directories": {
-			"lib": "dist/es6"
-		},
-		"dependencies": {
-			"aurelia-dependency-injection": "github:aurelia/dependency-injection@^0.10.0",
-			"aurelia-event-aggregator": "github:aurelia/event-aggregator@^0.8.0",
-			"aurelia-logging": "github:aurelia/logging@^0.7.0"
-		},
-		"devDependencies": {
-			"babel": "npm:babel-core@^5.6.4",
-			"babel-runtime": "npm:babel-runtime@^5.6.4",
-			"core-js": "npm:core-js@^0.9.4"
-		},
-		"overrides": {
-			"npm:core-js@0.9.18": {
-				"main": "client/shim.min"
-			}
-		}
-	}
+  "name": "aurelia-google-analytics",
+  "version": "1.0.0",
+  "description": "An Aurelia plugin that adds Google Analytics page tracking to your application.",
+  "keywords": [
+    "analytics",
+    "tracking",
+    "aurelia"
+  ],
+  "homepage": "https://github.com/miguelzakharia/aurelia-google-analytics",
+  "bugs": {
+    "url": "https://github.com/miguelzakharia/aurelia-google-analytics/issues"
+  },
+  "license": "MIT",
+  "author": "Miguel Zakharia <miguel@zakharia.me> (http://miguel.zakharia.me)",
+  "main": "dist/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/miguelzakharia/aurelia-google-analytics"
+  },
+  "scripts": {
+    "test": "gulp test"
+  },
+  "devDependencies": {
+    "aurelia-tools": "^0.1.3",
+    "browser-sync": "^1.8.1",
+    "conventional-changelog": "0.0.11",
+    "del": "^1.1.0",
+    "gulp": "^3.8.10",
+    "gulp-babel": "^5.1.0",
+    "gulp-bump": "^0.3.1",
+    "gulp-changed": "^1.1.0",
+    "gulp-if": "^1.2.5",
+    "gulp-jshint": "^1.9.0",
+    "gulp-less": "^3.0.3",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^0.6.6",
+    "gulp-protractor": "^0.0.12",
+    "gulp-sourcemaps": "^1.3.0",
+    "gulp-uglify": "^1.4.1",
+    "gulp-util": "^3.0.6",
+    "gulp-yuidoc": "^0.1.2",
+    "jasmine-core": "^2.1.3",
+    "jshint-stylish": "^1.0.0",
+    "karma": "^0.12.28",
+    "karma-babel-preprocessor": "^5.2.1",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-coverage": "^0.3.1",
+    "karma-jasmine": "^0.3.5",
+    "karma-jspm": "2.0.1-beta.2",
+    "object.assign": "^1.0.3",
+    "require-dir": "^0.1.0",
+    "run-sequence": "^1.0.2",
+    "vinyl-paths": "^1.0.0",
+    "yargs": "^2.1.1"
+  },
+  "jspm": {
+    "main": "index",
+    "format": "es6",
+    "directories": {
+      "lib": "dist/es6"
+    },
+    "dependencies": {
+      "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.0.0-beta.1",
+      "aurelia-event-aggregator": "npm:aurelia-event-aggregator@^1.0.0-beta.1",
+      "aurelia-logging": "npm:aurelia-logging@^1.0.0-beta.1"
+    },
+    "devDependencies": {
+      "babel": "npm:babel-core@^5.6.4",
+      "babel-runtime": "npm:babel-runtime@^5.6.4",
+      "core-js": "npm:core-js@^0.9.4"
+    },
+    "overrides": {
+      "npm:core-js@0.9.18": {
+        "main": "client/shim.min"
+      }
+    }
+  }
 }
