--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aurelia-google-analytics",
-  "version": "1.0.4",
+  "version": "2.0.0",
   "description": "An Aurelia plugin that adds Google Analytics page tracking to your application.",
   "keywords": [
     "analytics",
@@ -18,43 +18,29 @@
     "type": "git",
     "url": "https://github.com/miguelzakharia/aurelia-google-analytics"
   },
-  "scripts": {
-    "test": "gulp test"
-  },
   "devDependencies": {
-    "aurelia-tools": "^0.1.3",
-    "browser-sync": "^1.8.1",
-    "conventional-changelog": "0.0.11",
-    "del": "^1.1.0",
-    "gulp": "^3.8.10",
-    "gulp-babel": "^5.1.0",
-    "gulp-bump": "^0.3.1",
-    "gulp-changed": "^1.1.0",
-    "gulp-if": "^1.2.5",
+    "aurelia-tools": "^1.0.0",
+		"babel-plugin-syntax-flow": "^6.8.0",
+		"babel-plugin-transform-decorators-legacy": "^1.3.4",
+		"babel-plugin-transform-es2015-modules-amd": "^6.8.0",
+		"babel-plugin-transform-es2015-modules-commonjs": "^6.11.5",
+		"babel-plugin-transform-es2015-modules-systemjs": "^6.11.6",
+		"babel-plugin-transform-flow-strip-types": "^6.8.0",
+		"babel-preset-es2015": "^6.9.0",
+		"babel-preset-es2015-loose": "^7.0.0",
+		"babel-preset-stage-1": "^6.5.0",
+    "del": "^2.2.1",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-bump": "^2.2.0",
     "gulp-jshint": "^1.9.0",
-    "gulp-less": "^3.0.3",
-    "gulp-load-plugins": "^0.10.0",
-    "gulp-minify-css": "^1.2.1",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^0.6.6",
-    "gulp-protractor": "^0.0.12",
-    "gulp-sourcemaps": "^1.3.0",
-    "gulp-uglify": "^1.4.1",
-    "gulp-util": "^3.0.6",
     "gulp-yuidoc": "^0.1.2",
-    "jasmine-core": "^2.1.3",
-    "jshint-stylish": "^1.0.0",
-    "karma": "^0.12.28",
-    "karma-babel-preprocessor": "^5.2.1",
-    "karma-chrome-launcher": "^0.1.7",
-    "karma-coverage": "^0.3.1",
-    "karma-jasmine": "^0.3.5",
-    "karma-jspm": "2.0.1-beta.2",
-    "object.assign": "^1.0.3",
-    "require-dir": "^0.1.0",
-    "run-sequence": "^1.0.2",
-    "vinyl-paths": "^1.0.0",
-    "yargs": "^2.1.1"
+		"jshint-stylish": "^1.0.0",
+    "object.assign": "^4.0.4",
+    "require-dir": "^0.3.0",
+    "run-sequence": "^1.2.2",
+    "vinyl-paths": "^2.1.0",
+    "yargs": "^4.8.1"
   },
   "jspm": {
     "main": "index",
@@ -63,14 +49,13 @@
       "lib": "dist/amd"
     },
     "dependencies": {
-      "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.0.0-beta.1",
-      "aurelia-event-aggregator": "npm:aurelia-event-aggregator@^1.0.0-beta.1",
-      "aurelia-logging": "npm:aurelia-logging@^1.0.0-beta.1"
+      "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.3.0",
+      "aurelia-event-aggregator": "npm:aurelia-event-aggregator@^1.0.1",
+      "aurelia-logging": "npm:aurelia-logging@^1.2.0"
     },
     "devDependencies": {
-      "babel": "npm:babel-core@^5.6.4",
-      "babel-runtime": "npm:babel-runtime@^5.6.4",
-      "core-js": "npm:core-js@^2.0.3"
+      "babel": "npm:babel-core@^6.23.1",
+      "babel-runtime": "npm:babel-runtime@^6.23.0"
     }
   }
 }
