Adding deepmerge dependency and switching away from Object.assign()
We already try to do a deep object merge with Object.assign, but that's
not a deep merge and the default filter handler for click tracking gets
blasted away. This should allow for its use.

--- a/package.json
+++ b/package.json
@@ -58,5 +58,8 @@
       "babel": "npm:babel-core@^6.23.1",
       "babel-runtime": "npm:babel-runtime@^6.23.0"
     }
+  },
+  "dependencies": {
+    "deepmerge": "^1.3.2"
   }
 }
