--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "dependencies": {
       "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.3.0",
       "aurelia-event-aggregator": "npm:aurelia-event-aggregator@^1.0.1",
-      "aurelia-logging": "npm:aurelia-logging@^1.2.0"
+      "aurelia-logging": "npm:aurelia-logging@^1.2.0",
+			"deepmerge": "npm:deepmerge@^1.3.2"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^6.23.1",
